--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-	"name": "choctaw-nation/choctaw-plugin-template",
-	"description": "A plugin template for the Choctaw nation",
+	"name": "choctaw-nation/cno-facebook-share",
+	"description": "A simple plugin to allow users to share a page to Facebook",
 	"type": "project",
 	"config": {
 		"allow-plugins": {
@@ -9,8 +9,8 @@
 		}
 	},
 	"scripts": {
-		"phpcs": "phpcs --report-full --report-checkstyle=./phpcs-report.xml inc/ templates/ template-parts/ choctaw-events-plugin.php",
-		"phpcbf": "phpcbf inc/ templates/ template-parts/ choctaw-events-plugin.php"
+		"phpcs": "phpcs inc/ cno-facebook-share.php",
+		"phpcbf": "phpcbf inc/ cno-facebook-share.php"
 	},
 	"require-dev": {
 		"wp-coding-standards/wpcs": "*",
